# timeback-client

./: .gitignore  README.md  RELEASE.md  migrate_now.py  pyproject.toml  pytest.ini
_timebackDocs/: 1EdTech Timeback Platform Integration Guides.md  MasteryTrack.md  caliper-api.yaml  oneroster-api.yaml  powerpath-api.yaml  qti-api.yaml  timeback-events-api.yaml
src/oneroster_client/: __init__.py  client.py
src/timeback_client/: __init__.py  caliper.yaml  client.py
src/timeback_client/api/: __init__.py  academic_sessions.py  applications.py  assessment_items.py  assessment_results.py  assessment_tests.py  caliper.py  case.py  classes.py  component_resources.py  components.py  courses.py  enrollments.py  line_items.py  orgs.py  powerpath.py  qti_stimulus.py  resources.py  students.py  subject_tracks.py  users.py
src/timeback_client/core/: client.py
src/timeback_client/models/: __init__.py  academic_session.py  assessment_result.py  caliper.py  class_.py  component.py  component_resource.py  course.py  enrollment.py  lesson_plan.py  line_item.py  org.py  qti.py  resource.py  user.py
src/timeback_client/schemas/: Resources Metadata.md  entities.json  oneroster.sql  resource_metadata.json
src/timeback_client/scripts/: migrate_users.py
tests/: README.md  test_assessment_items.py  test_client.py  test_component_resources.py  test_components.py  test_courses.py  test_powerpath_test_assignments.py  test_resources.py  test_users.py
tests/application/: __init__.py  test_course_application.py  test_user_application.py
