[project]
name = "timeback-client"
version = "1.0.5"
description = "A Python client for the TimeBack API (OneRoster 1.2 implementation)"
authors = [
    {name = "Amanda Shipka"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]

[tool.poetry]
name = "timeback-client"
version = "1.0.5"
description = "A Python client for the TimeBack API (OneRoster 1.2 implementation)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "timeback_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that connect to the actual API (deselect with '-m \"not integration\"')",
] 